# AAC-Clydespace-test

./: CMakeLists.txt  ReadMe.md
.github/workflows/: CI.yml
include/: lis3mdl_driver.hpp
mock/: CMakeLists.txt  i2c_driver.cpp  i2c_driver.hpp
src/: lis3mdl_constants.hpp  lis3mdl_driver.cpp
test/: CMakeLists.txt  unit_test_lis3mdl_driver.cpp
